--- a/src/layouts/WebPagesLayout.astro
+++ b/src/layouts/WebPagesLayout.astro
@@ -28,7 +28,7 @@ import "../styles/global.css";
       
         
       </a>
-      <h2 class="text-end pr-2 lg:text-3xl  lg:text-center w-full absolute z-0">{namePage}</h2>
+      <h2 class="text-end text-lg pr-2 lg:text-3xl  lg:text-center w-full absolute z-0">{namePage}</h2>
     </nav>
     <main class="mx-auto mt-6 mb-32 max-w-screen-2xl">
       <slot />
