--- a/src/pages/WebPages/index.astro
+++ b/src/pages/WebPages/index.astro
@@ -8,7 +8,7 @@ import Layout from "../../layouts/Layout.astro";
     
     <a
       href="/WebPages/Control-de-ordenes"
-      class="w-full min-h-20 rounded-xl border items-center p-2 flex shadow bg-gray-200 duration-300 ease-in-out hover:-translate-y-2"
+      class="w-full min-h-20 rounded-xl border items-center p-2 flex shadow dark:bg-darkCard dark:border-none bg-gray-200 duration-300 ease-in-out hover:-translate-y-2"
     >
       <div class=" w-1/6 ">
         <svg
