--- a/src/components/Cards/simpleCard.astro
+++ b/src/components/Cards/simpleCard.astro
@@ -6,7 +6,7 @@ interface Props {
 
 const {title, description} = Astro.props;
 ---
-<div class=" lg:p-5 rounded-xl h-96 lg:w-96 w-11/12 bg-slate-300  lg:m-10 mx-auto mt-14  dark:bg-black">
+<div class=" lg:p-5 rounded-xl h-96 lg:w-96 w-11/12 bg-slate-300  lg:m-10 mx-auto mt-14  dark:bg-slate-700">
   <div
     class="fondo_card mt-8 w-4/6 h-1/2 bg-white m-auto rounded-xl hover:scale-125 duration-100"
   >
