--- a/src/components/WebPages/counterOrders.astro
+++ b/src/components/WebPages/counterOrders.astro
@@ -3,12 +3,12 @@
 >
   <div class="h-16 flex justify-evenly items-center">
     <div class="">
-      <div class="text-green-500 text-lg">Ordenes completadas</div>
+      <div class="text-green-500 text-lg">Completadas</div>
       <p class="text-center text-xl">5</p>
     </div>
     <span class="text-4xl my-auto text-gray-400">|</span>
     <div class="">
-      <div class="text-orange-500 text-lg">Ordenes recibidas</div>
+      <div class="text-orange-500 text-lg">Recibidas</div>
       <p class="text-center text-xl">8</p>
     </div>
   </div>
