Update orderCard styles

--- a/src/components/WebPages/orderCard.astro
+++ b/src/components/WebPages/orderCard.astro
@@ -27,11 +27,11 @@ const {
         <span class="text-cyan-500">|</span> 15/7/2025 <span class="text-cyan-500">|</span> 15:38
       </label>
       <label for="datetime" class="font-bold mt-3">Orden iniciada</label>
-      <input class="dark:bg-gray-900 bg-gray-50 h-12 w-11/12 mx-auto" type="datetime-local" id="datetime" name="datetime" />
+      <input class="dark:bg-gray-600 bg-gray-300 rounded-xl  px-10 h-12 w-11/12 mx-auto" type="datetime-local" id="datetime" name="datetime" />
       <label for="datetime" class="font-bold mt-3">Orden finalizada</label>
-      <input class="dark:bg-gray-900 bg-gray-50 h-12 w-11/12 mx-auto" type="datetime-local" id="datetime" name="datetime" />
+      <input class="dark:bg-gray-600 bg-gray-300 rounded-xl px-10 h-12 w-11/12 mx-auto" type="datetime-local" id="datetime" name="datetime" />
       <label for="options" class="font-bold mt-3">Estado</label>
-      <select class="dark:bg-gray-900 bg-gray-50 h-12 w-11/12 mx-auto" name="opciones" id="opciones">
+      <select class="dark:bg-gray-600 bg-gray-300 rounded-xl px-10 border border-slate-500 h-12 w-11/12 mx-auto" name="opciones" id="opciones">
         <option value="creado">Escoge una opción</option>
         <option value="creado">Creado</option>
         <option value="entregado">Entregado</option>
@@ -41,7 +41,7 @@ const {
         <option value="cancelada">Cancelada</option>
       </select>
       <p class="font-bold mt-3">Informacion adicional</p>
-      <p class="ml-4">{additionalInformation}</p>
+      <p class="ml-4 mr-2">{additionalInformation}</p>
     </div>
   </details>
 </div>
