--- a/src/pages/WebPages/Control-orders-TABLES.astro
+++ b/src/pages/WebPages/Control-orders-TABLES.astro
@@ -1,8 +1,22 @@
 ---
 import WebPagesLayout from "../../layouts/WebPagesLayout.astro";
-
+import NewTableAccordion from "../../components/WebPages/newTableAccordion.astro";
 ---
 
 <WebPagesLayout title="Order Control with TABLES" namePage="Order Control with TABLES">
-
+    <NewTableAccordion title="001428 Byron Vladimir Tito Sandoval" typeOrder="Foco rojo" colorStatus="red"/>
+    <NewTableAccordion title="003986 CARCELEN TORRES ALEXANDRA MARITZA" typeOrder="Instalación" colorStatus="blue"/>
+    <NewTableAccordion title="003987 IBAÑEZ BARRIOS NIDIA ESTHER" typeOrder="Cables caídos" colorStatus="gray"/>
+    <NewTableAccordion title="003991 CABEZAS NEPAS LUIS DANIEL" typeOrder="Traslado" colorStatus="green"/>
+    <NewTableAccordion title="003992 BARRE JARAMILLO MADELINE JULIANA" typeOrder="Reubicacion ONT" colorStatus="red"/>
+    <NewTableAccordion title="003985 TORRES TORRES JANNETH ALEXANDRA" typeOrder="Cambio de router" colorStatus="violet"/>
+    <NewTableAccordion title="003933 CALUÑA GUAQUIPANA JACQUELINE REBECA" typeOrder="Intermitencia wifi" colorStatus="green"/>
+    <NewTableAccordion title="003933 CALUÑA GUAQUIPANA JACQUELINE REBECA" typeOrder="Intermitencia wifi" colorStatus="gray"/>
+    <NewTableAccordion title="003982 TRUJILLO PEDROZO DIANA PAOLA" typeOrder="Inspección" colorStatus="green"/>
 </WebPagesLayout>
+
+<div class="border-red-600"></div>
+<div class="border-blue-600"></div>
+<div class="border-gray-600"></div>
+<div class="border-green-600"></div>
+<div class="border-violet-600"></div>
