--- a/src/components/WebPages/newTableAccordion.astro
+++ b/src/components/WebPages/newTableAccordion.astro
@@ -8,8 +8,8 @@ interface Props {
 const { title, typeOrder, colorStatus } = Astro.props;
 ---
 
-<div class={`border-b-4 rounded-xl border-${colorStatus}-600`}>
-  <details class="group py-4 [&_summary::-webkit-details-marker]:hidden">
+<div class={`border-b-4 rounded-xl border-${colorStatus}-600  overflow-hidden mt-3` }>
+  <details class={`group py-4 [&_summary::-webkit-details-marker]:hidden  open:bg-gray-900 `}>
     <summary
       class="flex cursor-pointer items-center justify-between dark:text-gray-100 ml-1"
     >
