--- a/src/components/WebPages/newTableAccordion.astro
+++ b/src/components/WebPages/newTableAccordion.astro
@@ -9,7 +9,7 @@ const { title, typeOrder, colorStatus } = Astro.props;
 ---
 
 <div class={`border-b-4 rounded-xl border-${colorStatus}-600  overflow-hidden mt-3` }>
-  <details class={`group py-4 [&_summary::-webkit-details-marker]:hidden  open:bg-gray-900 `}>
+  <details class={`group py-4 [&_summary::-webkit-details-marker]:hidden open:bg-gray-300  dark:open:bg-gray-800 `}>
     <summary
       class="flex cursor-pointer items-center justify-between dark:text-gray-100 ml-1"
     >
@@ -53,11 +53,11 @@ const { title, typeOrder, colorStatus } = Astro.props;
     <div class="mt- mx-1 flex flex-col ">
         <div class="text-center mt-3">Ticket - 74693 <span class="text-cyan-700 ">|</span> 23/7/2024 <span class="text-cyan-700 ">|</span> 11:19 PM</div>
         <label for="datetime" class="font-bold mt-3">Orden iniciado</label>
-        <input type="datetime-local" class="bg-gray-400 dark:bg-gray-700 p-2 rounded-md w-full">
+        <input type="datetime-local" class="bg-gray-200 dark:bg-gray-700 p-2 rounded-md w-full">
         <label for="datetime" class="font-bold mt-3">Orden finalizada</label>
-        <input type="datetime-local" class="bg-gray-400 dark:bg-gray-700 p-2 rounded-md w-full">
+        <input type="datetime-local" class="bg-gray-200 dark:bg-gray-700 p-2 rounded-md w-full">
         <label for="options" class="font-bold mt-3">Estado</label>
-        <select name="opciones" id="opciones" class="bg-gray-400 dark:bg-gray-700 p-2 rounded-md">
+        <select name="opciones" id="opciones" class="bg-gray-200 dark:bg-gray-700 p-2 rounded-md">
             <option value="">Escoge una opción</option>
             <option value="creado">Creado</option>
             <option value="entregado">Entregado</option>
