--- a/src/pages/WebPages/Control-orders-CARDS-1.astro
+++ b/src/pages/WebPages/Control-orders-CARDS-1.astro
@@ -5,8 +5,7 @@ import CounterOrders from "../../components/WebPages/counterOrders.astro";
 ---
 
 <WebPagesLayout
-  title="Control orders with CARDS"
-  namePage="Control orders with CARDS"
+  title="Control orders with CARDS 1"
 >
   <div class="lg:grid lg:grid-cols-3 gap-10">
     <div>
