--- a/src/pages/WebPages/index.astro
+++ b/src/pages/WebPages/index.astro
@@ -6,7 +6,7 @@ import CardPage from "../../components/WebPages/cardPage.astro";
 <Layout title="Kit Components | Pages">
   <h1 class="text-6xl text-center mb-5">Seccion de Pages</h1>
   <section class="grid lg:grid-cols-4 gap-3 w-11/12 lg:w-full mx-auto">
-    <CardPage title="Order Control with CARDS"  url="/WebPages/Control-orders-CARDS"/>
-    <CardPage title="Order Control with TABLES" url="/WebPages/Control-orders-TABLES" />
+    <CardPage title="Order Control with CARDS 1"  url="/WebPages/Control-orders-CARDS-1"/>
+    <CardPage title="Order Control with CARDS 2" url="/WebPages/Control-orders-CARDS-2" />
   </section>
 </Layout>
