--- a/src/pages/WebPages/Control-orders-CARDS-2.astro
+++ b/src/pages/WebPages/Control-orders-CARDS-2.astro
@@ -1,6 +1,7 @@
 ---
 import WebPagesLayout from "../../layouts/WebPagesLayout.astro";
 import NewTableAccordion from "../../components/WebPages/newTableAccordion.astro";
+import CounterOrders2 from "../../components/WebPages/counterOrders-2.astro";
 ---
 
 <WebPagesLayout
@@ -58,7 +59,59 @@ import NewTableAccordion from "../../components/WebPages/newTableAccordion.astro
         colorStatus="green"
       />
     </div>
+    <div>
+      <NewTableAccordion
+        title="001428 Byron Vladimir Tito Sandoval"
+        typeOrder="Foco rojo"
+        colorStatus="red"
+      />
+      <NewTableAccordion
+        title="003986 CARCELEN TORRES ALEXANDRA MARITZA"
+        typeOrder="Instalación"
+        colorStatus="blue"
+      />
+      <NewTableAccordion
+        title="003987 IBAÑEZ BARRIOS NIDIA ESTHER"
+        typeOrder="Cables caídos"
+        colorStatus="gray"
+      />
+    </div>
+    <div>
+      <NewTableAccordion
+        title="003991 CABEZAS NEPAS LUIS DANIEL"
+        typeOrder="Traslado"
+        colorStatus="green"
+      />
+      <NewTableAccordion
+        title="003992 BARRE JARAMILLO MADELINE JULIANA"
+        typeOrder="Reubicacion ONT"
+        colorStatus="red"
+      />
+      <NewTableAccordion
+        title="003985 TORRES TORRES JANNETH ALEXANDRA"
+        typeOrder="Cambio de router"
+        colorStatus="violet"
+      />
+    </div>
+    <div>
+      <NewTableAccordion
+        title="003933 CALUÑA GUAQUIPANA JACQUELINE REBECA"
+        typeOrder="Intermitencia wifi"
+        colorStatus="green"
+      />
+      <NewTableAccordion
+        title="003933 CALUÑA GUAQUIPANA JACQUELINE REBECA"
+        typeOrder="Intermitencia wifi"
+        colorStatus="gray"
+      />
+      <NewTableAccordion
+        title="003982 TRUJILLO PEDROZO DIANA PAOLA"
+        typeOrder="Inspección"
+        colorStatus="green"
+      />
+    </div>
   </section>
+  <CounterOrders2/>
 </WebPagesLayout>
 
 <div class="border-red-600"></div>
