--- a/src/pages/WebPages/index.astro
+++ b/src/pages/WebPages/index.astro
@@ -8,5 +8,6 @@ import CardPage from "../../components/WebPages/cardPage.astro";
   <section class="grid lg:grid-cols-4 gap-3 w-11/12 lg:w-full mx-auto">
     <CardPage title="Order Control with CARDS 1"  url="/WebPages/Control-orders-CARDS-1"/>
     <CardPage title="Order Control with CARDS 2" url="/WebPages/Control-orders-CARDS-2" />
+    <CardPage title="Order Control within the TABLE" url="/WebPages/Control-orders-TABLE-1" />
   </section>
 </Layout>
